test/fail/invalid_type.rlang
/* invalid type: foo */
foo i := 0;
